# rusted-application

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: .env.sample  .gitignore  Cargo.toml  README.md
api/migrations/2021-12-05-112021_create_accounts/: up.sql
api/src/: config.rs  handler.rs  main.rs  models.rs  schema.rs  util.rs
api/src/entity/: account.rs
api/src/handler/: account.rs  other.rs
api/src/modules/: errors.rs
api/src/util/: cookie.rs
app/: .eslintrc.json  .prettierrc.json  Makefile  next.config.js  package-lock.json  package.json  tsconfig.json
app/pages/: sign-up.tsx
app/src/components/sign-up/: index.tsx
app/src/recoil/form/account/sign-up/: index.ts  model.ts  state.ts  type.ts
app/src/share/: Header.tsx  Page.tsx
docker/: nextjs.Dockerfile  rust.Dockerfile
provision/: Dockerfile
