[package]
name = "rust_test_project"
version = "0.1.0"
authors = ["seito2 <seito1201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
config = "0.11.0"
deadpool-postgres = "0.9.0"
dotenv = "0.15.0"
serde = "1.0.129"
